--- a/App.scss
+++ b/App.scss
@@ -1,65 +1,39 @@
-$positive:hsl(163, 72%, 41%);
-$negative:hsl(356, 69%, 56%);
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
 
+}
 // MEDIA QUERIES
 @mixin Smartphone {
-    @media (min-width: 480px) {
-        @content;
-    }
+  @media (min-width: 480px) {
+      @content;
+  }
 }
 @mixin Laptop {
-    @media (min-width: 768px) {
-        @content;
-    }
+  @media (min-width: 768px) {
+      @content;
+  }
 }
 @mixin Desktop {
-    @media (min-width: 1024px) {
-        @content;
-    }
+  @media (min-width: 1024px) {
+      @content;
+  }
 }
 
 @mixin flexCenter($justify) {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: $justify;
-}
-
-.Container{
-    width: 95%;
-    margin: 0 auto;
-
-    @include Laptop{
-        width: 85%;
-    }
-}
-
-.App{
-    color: var(--Text);
-}
-body{
-    background: var(--MainBG);
-}
-
-
-.facebook{
-    border-top: 6px solid hsl(208, 92%, 53%);
-}
-.twitter{
-    border-top: 6px solid hsl(203, 89%, 53%);
-}
-.instagram{
-    position: relative;
-    background-image:linear-gradient(to right,hsl(37, 97%, 70%),hsl(329, 70%, 58%)) !important;
-}
-.youtube{
-    border-top: 6px solid hsl(348, 97%, 39%);
-}
-.positive{
-    color: $positive !important;
-}
-
-.negative{
-    color: $negative !important;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: $justify;
 }
